--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "redux-persist-expo-filesystem": "^2.0.0"
+    "redux-persist-expo-filesystem": "^2.0.0",
+    "expo-linear-gradient": "~11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
