--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.5.0",
     "@types/lodash": "^4.14.179",
     "expo": "~44.0.0",
+    "expo-linear-gradient": "^11.0.3",
     "expo-status-bar": "~1.2.0",
     "lodash": "^4.17.21",
     "react": "17.0.1",
@@ -28,8 +29,7 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
-    "redux-persist-expo-filesystem": "^2.0.0",
-    "expo-linear-gradient": "~11.0.3"
+    "redux-persist-expo-filesystem": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
